Tue Jan  8 03:39:46 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          Bug fix that was preventing baseline metrics from updating
          if it already existed.

Tue Jan  8 02:14:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          Reverted the change below and creating a new stored procedure
          for setting the default baseline metrics.

Mon Jan  7 23:25:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          The host column is allowed to contain a NULL value. This
          signifies that the host is unknown, and the current baseline
          is the default metric.

Mon Jan  7 19:28:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/cuts/Boost_JUnit_Formatter.h:
        * tests/cuts/Boost_JUnit_Formatter.cpp:
        * tests/cuts/Port_Measurement_Test.cpp:
        * tests/cuts/Test_Log.h:
        * tests/cuts/Time_Measurement_Test.cpp:
        * tests/cuts/Timestamp_Metric_Test.cpp:
        * tests/cuts/workers/CPU_Worker_Test.cpp:

          Added package information to all the unit test suites.

Sun Jan  6 00:02:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/autobuild.build:

          Simplified the build specification by using the target
          devenv.rebuild instead of seperate calls to devenv.clean
          and devenv.build.

Sat Jan  5 23:08:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/TIOA/TIOA_Generators.h:
        * MDE/GME/paradigms/PICML/be/XML/XML_Generators.h:
        * MDE/GME/paradigms/PICML/be/natural-lang/Natural_Lang_Generators.h:

          Fixed build errors on vc8 related to missing include files that
          define appropriate macros.

Sat Jan  5 22:31:58 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/BE_Condition_Parser_T.h:
